force-app/main/default/objects/SM_QuestionSetGroup__c/SM_QuestionSetGroup__c.object-meta.xml
<CustomObject>
    <description>Group of questions</description>
    <label>Question Set Group</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Set Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>