force-app/main/default/objects/SM_QuestionSetGroup__c/fields/GroupNumber__c.field-meta.xml
<CustomField>
    <fullName>GroupNumber__c</fullName>
    <label>Group Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>