force-app/main/default/objects/SM_QuestionSetGroup__c/fields/QuestionSet__c.field-meta.xml
<CustomField>
    <fullName>QuestionSet__c</fullName>
    <label>Question Set</label>
    <referenceTo>SM_QuestionSet__c</referenceTo>
    <relationshipLabel>Question Set Groups</relationshipLabel>
    <relationshipName>Question_Set_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>